AC_INIT(mysql.mli)

AC_MSG_CHECKING(for version)
VERSION="`etc/shtool version -l txt -d short VERSION`"
AC_MSG_RESULT([$VERSION])
AC_SUBST(VERSION)

AC_MSG_CHECKING([for platform])
ARCH="`etc/shtool platform`"
AC_MSG_RESULT([$ARCH])
AC_SUBST(ARCH)
AC_CHECKING([for ocaml compiler and tools])
AC_CHECK_PROG(ocamlc,ocamlc,ocamlc)
AC_CHECK_PROG(ocamlopt,ocamlopt,ocamlopt)
AC_CHECK_PROG(ocamlfind,ocamlfind,ocamlfind)

AC_PROG_INSTALL
AC_SUBST(INSTALL)

AC_CHECKING([for C compiler])
AC_PROG_CC()

AC_CHECKING([for C header files])
AC_HEADER_STDC()

AC_CHECKING(libraries)

dnl First see if we can link to mysql without any special flags...
AC_CHECKING([for MySQL library])
AC_CHECK_LIB(mysqlclient, mysql_real_connect, [], [AC_MSG_ERROR([MySQL client library not found])])

AC_CHECKING([for MySQL header files])
AC_CHECK_HEADERS([mysql/mysql.h mysql.h], [break]) 
if test "$ac_cv_header_mysql_mysql_h" != "yes" -a "$ac_cv_header_mysql_h" != "yes"; then 
    AC_MSG_ERROR([MySQL headers not found]) 
fi

AC_CONFIG_HEADERS([config.h])
AC_OUTPUT(Makefile)
