AC_INIT(ocaml-mysql,1.1.3)

AC_CHECKING([for ocaml compiler and tools])
AC_CHECK_PROG(ocamlc,ocamlc,ocamlc)
AC_CHECK_PROG(ocamlopt,ocamlopt,ocamlopt)
AC_CHECK_PROG(ocamlfind,ocamlfind,ocamlfind)

AC_PROG_INSTALL
AC_SUBST(INSTALL)

AC_CHECKING([for C compiler])
AC_PROG_CC()

AC_CHECKING([for C header files])
AC_HEADER_STDC()

AC_MSG_CHECKING([for mysql_config include])
MYSQL_INCLUDE=`mysql_config --include`
AS_IF([ test "$?" -eq 0 ],[CPPFLAGS="$MYSQL_INCLUDE $CPPFLAGS"],)
AC_MSG_RESULT([$MYSQL_INCLUDE])

AC_MSG_CHECKING([for mysql_config pkglibdir])
MYSQL_LIBDIR=`mysql_config --variable=pkglibdir`
AS_IF([ test "$?" -eq 0 ],[LDFLAGS="-L$MYSQL_LIBDIR $LDFLAGS"],)
AC_MSG_RESULT([$MYSQL_LIBDIR])

AC_CHECKING([for MySQL library])
AC_CHECK_LIB(mysqlclient, mysql_real_connect, [], [AC_MSG_ERROR([MySQL client library not found])])

AC_CHECKING([for MySQL header files])
AC_CHECK_HEADERS([mysql.h mysql/mysql.h mysql.h], [break])
if test "$ac_cv_header_mysql_mysql_h" != "yes" -a "$ac_cv_header_mysql_h" != "yes"; then
    AC_MSG_ERROR([MySQL headers not found])
fi

AC_CONFIG_HEADERS([config.h])
AC_OUTPUT(Makefile)
AC_OUTPUT(VERSION)
